Added jvm opts Cleaned test images